CLIENT-872: collapse fix

--- a/src/modules/dex/directives/layout/layout.less
+++ b/src/modules/dex/directives/layout/layout.less
@@ -350,6 +350,16 @@ html body.dex .notifications {
 }
 
 ////responsive
+@media screen and (max-width: 1024px) {
+  w-layout {
+    .dex-layout {
+      &__candlechart {
+        transform: translate(0);
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 660px) and (max-width: 1024px) {
 
   .dex.main .main-content {
@@ -470,7 +480,7 @@ html body.dex .notifications {
         max-height: 320px;
         min-height: 320px;
         height: 320px;
-        left: 0;
+        transform: translateX(0);
         margin-bottom: 5px;
         order: 1;
 
@@ -514,5 +524,4 @@ html body.dex .notifications {
 
     }
   }
-
 }
